scroll-to button functionality to center currently open card, btn text align fix to left

--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ img {
   margin-bottom: 10px;
 }
 
+.btn {
+  text-align: left;
+}
+
 p.card-text {
   /* height: 120px; */
 }
